--- a/reviewms/src/main/resources/application.yml
+++ b/reviewms/src/main/resources/application.yml
@@ -10,3 +10,9 @@ spring:
       authentication-database: admin
 server:
   port: 8083
+eureka:
+  client:
+    fetch-registry: true
+    register-with-eureka: true
+    service-url:
+      defaultZone: http://localhost:8761/eureka
