--- a/jobmicroservices/src/main/resources/application.yml
+++ b/jobmicroservices/src/main/resources/application.yml
@@ -1,24 +1,6 @@
 spring:
   application:
     name: jobmicroservices
-  jpa:
-    show-sql: true
-    hibernate:
-      ddl-auto: update
-    properties:
-      hibernate:
-        dialect: org.hibernate.dialect.PostgreSQLDialect
-        default_schema: jobms
-  datasource:
-    username: postgres
-    password: 1
-    driver-class-name: org.postgresql.Driver
-    url: jdbc:postgresql://localhost:5432/postgres
-server:
-  port: 8082
-eureka:
-  client:
-    fetch-registry: true
-    register-with-eureka: true
-    service-url:
-      defaultZone: http://localhost:8761/eureka
+  config:
+    import: "optional:configserver:${CONFIG_URL:http://localhost:8888}"
+
