--- a/reviewms/src/main/resources/application.yml
+++ b/reviewms/src/main/resources/application.yml
@@ -1,18 +1,5 @@
 spring:
   application:
     name: reviewms
-  data:
-    mongodb:
-      host: localhost
-      port: 27017
-      username: root
-      password: example
-      authentication-database: admin
-server:
-  port: 8083
-eureka:
-  client:
-    fetch-registry: true
-    register-with-eureka: true
-    service-url:
-      defaultZone: http://localhost:8761/eureka
+  config:
+    import: "optional:configserver:${CONFIG_URL:http://localhost:8888}"
