--- a/companymicroservices/src/main/resources/application.yml
+++ b/companymicroservices/src/main/resources/application.yml
@@ -16,3 +16,9 @@ spring:
     url: jdbc:postgresql://localhost:5432/postgres
 server:
   port: 8081
+eureka:
+  client:
+    fetch-registry: true
+    register-with-eureka: true
+    service-url:
+      defaultZone: http://localhost:8761/eureka
