--- a/reviewms/src/main/resources/application.yml
+++ b/reviewms/src/main/resources/application.yml
@@ -2,4 +2,4 @@ spring:
   application:
     name: reviewms
   config:
-    import: "optional:configserver:${CONFIG_URL:http://localhost:8888}"
+    import: "optional:configserver:http://localhost:8888"
