--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,7 +9,33 @@ services:
       RABBITMQ_DEFAULT_USER: guest
       RABBITMQ_DEFAULT_PASS: guest
     networks:
-      - mongo_network
+      - app_network
+
+  redis:
+    image: redis:latest
+    container_name: redis-container
+    ports:
+      - "6379:6379"
+    volumes:
+      - redis-data:/data
+    restart: always
+    networks:
+      - app_network
+
+  redisinsight:
+    image: redis/redisinsight:latest
+    container_name: redisinsight
+    ports:
+      - "5540:5540"
+    restart: always
+    environment:
+      - REDIS_HOST=redis-container
+      - REDIS_PORT=6379
+    depends_on:
+      - redis
+    networks:
+      - app_network
+
   mongo:
     image: mongo:latest
     container_name: mongodb_container
@@ -22,7 +48,7 @@ services:
     volumes:
       - mongo_data:/data/db
     networks:
-      - mongo_network
+      - app_network
 
   mongo_express:
     image: mongo-express:latest
@@ -38,10 +64,12 @@ services:
       ME_CONFIG_MONGODB_SERVER: mongodb_container
       ME_CONFIG_BASICAUTH: "false"
     networks:
-      - mongo_network
+      - app_network
 volumes:
   mongo_data:
     driver: local
+  redis-data:
+    driver: local
 networks:
-  mongo_network:
+  app_network:
     driver: bridge
